[project]
name = "ai-mechanic-obd"
version = "0.1.0"
description = "AI Mechanic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "console-menu>=0.8.0",
    "dspy>=3.0.3",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.119.0",
    "influxdb-client>=1.49.0",
    "llama-index>=0.10.68",
    "llama-index-embeddings-ollama>=0.1.3",
    "llama-index-llms-ollama>=0.2.2",
    "loguru>=0.7.3",
    "obd>=0.7.3",
    "ollama>=0.6.0",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "ujson>=5.11.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
