[project]
name = "massa-appiah"
version = "0.2.0"
description = "AI OBD Diagnostic Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "console-menu>=0.8.0",
    "dspy>=3.0.3",
    "influxdb-client>=1.49.0",
    "llama-index>=0.10.68",
    "llama-index-embeddings-ollama>=0.1.3",
    "llama-index-llms-ollama>=0.2.2",
    "loguru>=0.7.3",
    "obd>=0.7.3",
    "python-dotenv>=1.1.1",
    "textual[syntax]>=6.4.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.3",
    "textual-dev>=1.8.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
